# c-tutorial

./: .gitignore  CMakeLists.txt  Makefile  README.md  arrays.c  build.sh  build_gkt3.sh  main.c  malloc.c  strings.c
gtk/: README.md  build_gkt3.sh
src/: Makefile  example-0.c  example-1.c  functions.c  functions.h  main.c  morefunctions.c  morefunctions.h  pointers.c  structs.c
